--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -1,56 +1,57 @@
-.mainCtn {
-    display: flex;
-    flex-direction: row;
-}
-
-.sidebar {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    height: 100vh;
-    width: 300px;
-    background-color: rgb(29, 29, 29);
-}
-
-.sidebar .header {
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    border-bottom: solid 1px #323232;
-}
-
-.sidebar .body {
-    padding: 15px;
-}
-
-.main {
-    width: 100%;
-}
-
-.main .header {
+.header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    border-bottom: solid 1px #323232;
+    padding: 15.6px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: solid 1px #1a1b1f;
 }
 
-.header .infoStack {
-   display: flex;
-   flex-direction: column;
-   margin-left: 10px;
-   text-align: left;
+.header h3 {
+    margin: 0 auto;
 }
 
-.infoStack .subtitle {
-    font-size: 10pt;
-    color: darkgray;
- }
+.spcr {
+    flex-grow: 1;
+}
 
-.main .header h3 {
+.content {
+    padding: 20px;
+}
+
+.songGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 15px;
+    align-items: stretch;
+}
+
+.songLink {
+    text-decoration: none;
+    color: inherit;
+}
+
+.songItem {
+    background-color: #292929;
+    padding: 15px;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    transition: background-color 0.3s;
+}
+
+.songItem:hover {
+    background-color: #3a3a3a;
+}
+
+.songItem h3 {
     margin: 0;
-    font-weight: 800;
+    font-size: 16px;
 }
 
 .header button {
@@ -70,12 +71,6 @@
 }
 
 .header button:hover {
-    width: 38px;
-    height: 38px;
-    padding: 8px;
-    border-radius: 25%;
-    margin: 0 auto;
-    font-size: 11.5pt;
     background-color: rgb(40, 40, 40);
 }
 
